# Ros-GUI

./: API_DOCUMENTATION.md  COMPLETION_REPORT.md  IMAGE_PERFORMANCE_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  VERIFICATION_CHECKLIST.md  gui_imgui.py  imgui.ini  requirements_backend.txt  requirements_gui.txt  rosbridge_drone_device.py  rosclient_gui_test.py  start.bat  start.sh  start_backend.py  start_gui.bat  start_gui.sh  test_rosclient.py
backend/: API_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  __init__.py  auth.py  cache.py  config.py  database.py  middleware.py  requirements.txt  server.py
backend/alembic/: env.py
backend/models/: __init__.py  agent.py  device.py  drone.py  log.py  operation.py  recording.py  task.py  user.py
backend/routers/: __init__.py  agent.py  auth.py  devices.py  drones.py  health.py  images.py  logs.py  operations.py  pointclouds.py  recordings.py  tasks.py
backend/schemas/: __init__.py  agent.py  auth.py  device.py  drone.py  log.py  operation.py  recording.py  response.py  task.py
backend/services/: __init__.py  agent_service.py  device_service.py  drone_service.py  log_service.py  operation_service.py  recording_service.py  task_service.py
docs/: CLIENT_ARCHITECTURE_OPTIMIZATION.md  ENHANCEMENTS.md  GUI_TEST_README.md  QUICKSTART.md  README_IMGUI.md
frontend/: ARCHITECTURE.md  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts
gui/: ARCHITECTURE.md  COMPLETION_STATUS.md  FINAL_SUMMARY.md  MIGRATION_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  __init__.py  main.py
rosclient/: __init__.py
tests/: README.md  __init__.py  conftest.py
uavcommander/: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
uavcommander/cli/: README.md  __init__.py  commands.py  main.py  repl.py
uavcommander/core/: README.md  __init__.py
uavcommander/core/agent/: __init__.py  automator.py  basellm.py  context.py  executor.py  invocation.py  llm.py  prompts.py  readme.md  registry.py  scheduler.py  task.py
uavcommander/core/config/: README.md  __init__.py  llm_config.py  ros_params.py  safety_policy.py  settings.py
uavcommander/core/schema/: README.md  __init__.py  events.py  messages.py  task_state.py  tool_call.py
uavcommander/core/tools/: README.md  __init__.py  device_tool.py  swarm_tool.py  tool_registry.py  tools.py
uavcommander/examples/: README.md  __init__.py  basic_usage.py
uavcommander/tests/: README.md  __init__.py  conftest.py  test_agent.py  test_tools.py
uavcommander/utils/: README.md  __init__.py  async_utils.py  event_bus.py  logging.py
(+85 files in other folders)
